--- a/fitness-routine-for-men.html
+++ b/fitness-routine-for-men.html
@@ -3,111 +3,79 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>The Ultimate Fitness Routine for Men | TestoFit</title>
+  <title>Fitness Routine for Men | TestoFit</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Outfit', sans-serif;
       margin: 0;
       background-color: #f4f4f4;
-      color: #333;
+      color: #222;
     }
     header {
-      background: linear-gradient(135deg, #00b894, #019875);
+      background-color: #111;
       color: white;
-      padding: 1.5rem 1rem;
+      padding: 1rem;
       text-align: center;
-      box-shadow: 0 4px 8px rgba(0,184,148,0.4);
     }
     nav a {
       color: white;
-      margin: 0 18px;
+      margin: 0 15px;
       text-decoration: none;
-      font-weight: 700;
-      font-size: 1.1rem;
-      padding: 6px 14px;
-      border-radius: 8px;
-      transition: background-color 0.3s ease;
-      display: inline-block;
+      font-weight: 600;
     }
     nav a:hover {
-      background-color: rgba(255, 255, 255, 0.25);
-    }
-    main {
-      max-width: 850px;
-      margin: 2.5rem auto 4rem;
-      padding: 2.5rem 3rem;
-      background: white;
-      border-radius: 14px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.08);
-      line-height: 1.6;
-    }
-    h1 {
-      font-weight: 900;
-      font-size: 2.8rem;
-      margin-top: 0;
-      color: #01684b;
-    }
-    h2 {
-      margin-top: 2.8rem;
-      font-weight: 700;
-      font-size: 1.6rem;
-      border-bottom: 3px solid #00b894;
-      padding-bottom: 0.35rem;
-      color: #017a55;
-    }
-    h3 {
-      margin-top: 1.8rem;
-      font-weight: 600;
-      font-size: 1.3rem;
-      color: #019875;
-    }
-    p {
-      margin-top: 0.6rem;
-    }
-    ul {
-      padding-left: 1.4rem;
-    }
-    ul li {
-      margin-bottom: 0.7rem;
-      font-size: 1.05rem;
-    }
-    a.article-link, a.product-link {
-      color: #019875;
-      text-decoration: none;
-      font-weight: 700;
-      transition: color 0.3s ease;
-    }
-    a.article-link:hover, a.product-link:hover {
-      color: #00865a;
       text-decoration: underline;
     }
-    .product-link {
-      font-weight: 600;
-      font-size: 1rem;
+    main {
+      max-width: 900px;
+      margin: auto;
+      padding: 2rem;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.07);
+    }
+    h1 {
+      margin-top: 0;
+      font-weight: 800;
+      font-size: 2.2rem;
+      color: #00b894;
+    }
+    h2 {
+      color: #0984e3;
+    }
+    a.btn {
+      display: inline-block;
+      background-color: #00b894;
+      color: white;
+      padding: 10px 15px;
+      margin: 10px 0 20px;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: 700;
+      transition: background-color 0.3s ease;
+    }
+    a.btn:hover {
+      background-color: #019875;
+    }
+    ul {
+      list-style-type: disc;
+      padding-left: 20px;
     }
     footer {
-      margin-top: 4rem;
-      padding: 1.2rem 0;
-      background-color: #d9ede9;
-      border-top: 1px solid #a7d4c8;
-      color: #01684b;
-      font-size: 0.95rem;
+      margin-top: 3rem;
+      padding: 1rem 0;
+      background-color: #f9f9f9;
+      border-top: 1px solid #ddd;
+      color: #666;
+      font-size: 0.9rem;
       text-align: center;
-      font-style: italic;
-      font-weight: 600;
-      letter-spacing: 0.02em;
     }
     footer p {
-      margin: 0.4rem 0;
+      margin: 0.5rem 0;
     }
-    .note {
-      background-color: #e6f5f2;
-      border-left: 5px solid #00b894;
-      padding: 0.8rem 1rem;
-      margin: 1.2rem 0;
+    footer p em {
       font-style: italic;
-      color: #01684b;
     }
   </style>
 </head>
@@ -123,95 +91,62 @@
   </header>
 
   <main>
-    <h1>The Ultimate Fitness Routine for Men</h1>
-    <p>This comprehensive routine is designed to boost natural testosterone production, build muscle, and improve overall health. We focus on compound lifts, proper form, and smart recovery. Whether you’re new to lifting or looking to optimize your workout, this guide covers everything you need.</p>
+    <h1>Comprehensive Fitness Routine for Men</h1>
+    <p>Building muscle, increasing strength, and improving testosterone levels requires a well-rounded fitness routine. This guide covers essential exercises, recovery tips, and recommended gear to help you train effectively.</p>
 
-    <h2>1. Warm-Up & Mobility</h2>
-    <p>Begin every session with 10-15 minutes of light cardio (jump rope, brisk walking) and dynamic stretches to prepare your muscles and joints for lifting. Focus on mobility drills targeting hips, shoulders, and thoracic spine.</p>
-
-    <h2>2. Core Compound Lifts</h2>
-    <p>These exercises activate large muscle groups and stimulate testosterone release effectively.</p>
-
-    <h3>Squats</h3>
-    <p>Targets quads, glutes, hamstrings, and core. Fundamental for overall strength.</p>
+    <h2>Key Exercises</h2>
+    <p>Focus on compound lifts that engage multiple muscle groups and stimulate hormonal responses:</p>
     <ul>
-      <li>3-4 sets of 6-8 reps</li>
-      <li>Keep chest up, back neutral, knees tracking toes</li>
-    </ul>
-    <p><a class="product-link" href="https://www.amazon.com/dp/B08C4VP48V?tag=testofit-20" target="_blank" rel="noopener noreferrer">Recommended: Rogue Fitness Squat Rack</a></p>
-
-    <h3>Deadlifts</h3>
-    <p>Engages posterior chain — hamstrings, glutes, lower back, traps.</p>
-    <ul>
-      <li>3 sets of 5 reps</li>
-      <li>Maintain flat back, drive through heels</li>
-    </ul>
-    <p><a class="product-link" href="https://www.amazon.com/dp/B07TJH77D6?tag=testofit-20" target="_blank" rel="noopener noreferrer">Recommended: CAP Barbell Olympic Hex Dumbbells</a></p>
-
-    <h3>Bench Press</h3>
-    <p>Builds chest, shoulders, and triceps.</p>
-    <ul>
-      <li>3-4 sets of 6-8 reps</li>
-      <li>Keep wrists straight, control descent</li>
-    </ul>
-    <p><a class="product-link" href="https://www.amazon.com/dp/B07W6PSF4P?tag=testofit-20" target="_blank" rel="noopener noreferrer">Recommended: Fitness Reality Weight Bench</a></p>
-
-    <h3>Overhead Press</h3>
-    <p>Targets shoulders and triceps, promotes upper body strength.</p>
-    <ul>
-      <li>3 sets of 6-8 reps</li>
-      <li>Keep core tight and avoid arching lower back</li>
-    </ul>
-    <p><a class="product-link" href="https://www.amazon.com/dp/B01M6M9KBS?tag=testofit-20" target="_blank" rel="noopener noreferrer">Recommended: CAP Barbell Olympic Weight Plates</a></p>
-
-    <h2>3. Accessory Work</h2>
-    <p>Complement the big lifts with accessory exercises that strengthen smaller muscles and improve stability.</p>
-    <ul>
-      <li><strong>Pull-ups or Lat Pulldown:</strong> For back and biceps</li>
-      <li><strong>Barbell or Dumbbell Rows:</strong> Strengthen upper and mid-back</li>
-      <li><strong>Leg Curls or Romanian Deadlifts:</strong> Hamstring focus</li>
-      <li><strong>Bicep Curls & Tricep Extensions:</strong> Arm definition and strength</li>
-      <li><strong>Planks & Hanging Leg Raises:</strong> Core stability</li>
+      <li><strong>Squats:</strong> Builds lower body strength and increases testosterone naturally.</li>
+      <li><strong>Deadlifts:</strong> Excellent for total body strength and hormone release.</li>
+      <li><strong>Bench Press:</strong> Targets chest, shoulders, and triceps for upper body mass.</li>
+      <li><strong>Overhead Press:</strong> Strengthens shoulders and improves posture.</li>
+      <li><strong>Pull-ups/Chin-ups:</strong> Great for back and biceps development.</li>
+      <li><strong>Rows:</strong> Balances pressing movements and supports shoulder health.</li>
     </ul>
 
-    <h2>4. Recovery & Rest</h2>
-    <p>Testosterone production and muscle growth require adequate recovery:</p>
+    <h2>Recommended Equipment</h2>
+    <p>Having quality gear makes workouts safer and more effective. Here are some of the best fitness products to consider, available on Amazon:</p>
+
+    <h3>1. JELENS Multi-Function Power Rack</h3>
+    <p>This sturdy, adjustable squat rack supports various exercises including squats, bench press, and pull-ups — perfect for a home gym setup.</p>
+    <a class="btn" href="https://www.amazon.com/dp/B0DXKW1HMV?tag=testofit-20" target="_blank" rel="noopener noreferrer">Buy JELENS Power Rack</a>
+
+    <h3>2. CAP Barbell Olympic Hex Dumbbells</h3>
+    <p>Durable dumbbells with ergonomic design ideal for curls, presses, and accessory work that complements your main lifts.</p>
+    <a class="btn" href="https://www.amazon.com/dp/B093RQ6YW8?tag=testofit-20" target="_blank" rel="noopener noreferrer">Buy CAP Barbell Dumbbells</a>
+
+    <h3>3. Fitness Reality Weight Bench</h3>
+    <p>Adjustable bench for various pressing and rowing exercises, designed for comfort and stability.</p>
+    <a class="btn" href="https://www.amazon.com/dp/B099JZT1WR?tag=testofit-20" target="_blank" rel="noopener noreferrer">Buy Fitness Reality Weight Bench</a>
+
+    <h3>4. Fitvids Olympic Weight Plates</h3>
+    <p>High-quality weight plates for barbell exercises, perfect for progressive overload and strength gains.</p>
+    <a class="btn" href="https://www.amazon.com/dp/B0DRFFPPP4?tag=testofit-20" target="_blank" rel="noopener noreferrer">Buy Fitvids Olympic Weight Plates</a>
+
+    <h2>Training Tips for Maximum Testosterone</h2>
     <ul>
-      <li>Sleep 7-9 hours nightly</li>
-      <li>Maintain balanced nutrition rich in protein, healthy fats, and micronutrients</li>
-      <li>Use active recovery days (light walking, yoga)</li>
-      <li>Stretch and foam roll to reduce soreness and improve flexibility</li>
+      <li><strong>Progressive Overload:</strong> Gradually increase weight and intensity to stimulate growth and hormone production.</li>
+      <li><strong>Compound Movements:</strong> Prioritize exercises that recruit large muscle groups for optimal hormonal response.</li>
+      <li><strong>Proper Rest:</strong> Allow 48-72 hours recovery between heavy sessions to support testosterone levels.</li>
+      <li><strong>Nutrition:</strong> Support workouts with adequate protein, healthy fats, and micronutrients.</li>
+      <li><strong>Sleep:</strong> Aim for 7-9 hours per night as testosterone production peaks during deep sleep.</li>
+      <li><strong>Consistency:</strong> Maintain a routine for long-term results.</li>
     </ul>
 
-    <div class="note">
-      <strong>Pro tip:</strong> Consistency is key. Progressively increase weight or reps every 1-2 weeks to keep challenging your body and boost hormone response.
-    </div>
-
-    <h2>5. Sample Weekly Plan</h2>
-    <p>A balanced split targeting all major muscle groups:</p>
+    <h2>Sample Weekly Workout Split</h2>
     <ul>
-      <li><strong>Monday:</strong> Squat focus + accessory lower body</li>
-      <li><strong>Tuesday:</strong> Bench press + upper body accessories</li>
-      <li><strong>Wednesday:</strong> Rest or active recovery</li>
-      <li><strong>Thursday:</strong> Deadlifts + posterior chain accessories</li>
-      <li><strong>Friday:</strong> Overhead press + upper body accessories</li>
-      <li><strong>Saturday & Sunday:</strong> Rest, mobility, light cardio</li>
+      <li><strong>Monday:</strong> Squat, Overhead Press, Pull-ups</li>
+      <li><strong>Wednesday:</strong> Deadlift, Bench Press, Rows</li>
+      <li><strong>Friday:</strong> Squat, Overhead Press, Chin-ups</li>
+      <li><em>Optional accessory work and cardio on off days.</em></li>
     </ul>
 
-    <h2>Recommended Gear & Equipment</h2>
-    <ul>
-      <li><a class="product-link" href="https://www.amazon.com/dp/B08C4VP48V?tag=testofit-20" target="_blank" rel="noopener noreferrer">Rogue Fitness Squat Rack</a> — essential for heavy squats and safety</li>
-      <li><a class="product-link" href="https://www.amazon.com/dp/B07TJH77D6?tag=testofit-20" target="_blank" rel="noopener noreferrer">CAP Barbell Hex Dumbbells</a> — versatile weights for accessory lifts</li>
-      <li><a class="product-link" href="https://www.amazon.com/dp/B07W6PSF4P?tag=testofit-20" target="_blank" rel="noopener noreferrer">Fitness Reality Weight Bench</a> — adjustable bench for presses and rows</li>
-      <li><a class="product-link" href="https://www.amazon.com/dp/B01M6M9KBS?tag=testofit-20" target="_blank" rel="noopener noreferrer">CAP Olympic Weight Plates</a> — quality plates to build your home gym</li>
-      <li><a class="product-link" href="https://www.amazon.com/dp/B07TSKV6LC?tag=testofit-20" target="_blank" rel="noopener noreferrer">Fit Simplify Resistance Bands</a> — great for warm-ups, mobility, and accessory work</li>
-    </ul>
-
-    <p>Remember, a well-rounded fitness routine not only builds muscle but supports healthy testosterone and overall vitality.</p>
+    <p><strong>Note:</strong> Always warm up properly and consider consulting a fitness professional to tailor the program to your individual needs.</p>
   </main>
 
   <footer>
-    <p>Disclosure: Some links are affiliate links. We may earn a commission if you purchase through them, at no extra cost to you.</p>
+    <p><em>Disclosure: Some links are affiliate links. We may earn a commission if you purchase through them, at no extra cost to you.</em></p>
     <p>&copy; 2025 TestoFit. All rights reserved.</p>
   </footer>
 </body>
