--- a/fitness-routine-for-men.html
+++ b/fitness-routine-for-men.html
@@ -28,39 +28,50 @@
       text-decoration: underline;
     }
     main {
-      max-width: 900px;
-      margin: auto;
+      max-width: 850px;
+      margin: 2rem auto;
       padding: 2rem;
       background: white;
       border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.07);
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      line-height: 1.6;
     }
     h1 {
-      margin-top: 0;
       font-weight: 800;
       font-size: 2.2rem;
-      color: #00b894;
+      margin-bottom: 1rem;
+      color: #00796b;
     }
     h2 {
-      color: #0984e3;
+      font-weight: 700;
+      margin-top: 2rem;
+      color: #004d40;
+    }
+    p {
+      margin-bottom: 1rem;
+      font-size: 1rem;
+    }
+    ul {
+      margin-left: 1.2rem;
+      margin-bottom: 1rem;
+    }
+    li {
+      margin-bottom: 0.5rem;
     }
     a.btn {
       display: inline-block;
       background-color: #00b894;
       color: white;
-      padding: 10px 15px;
-      margin: 10px 0 20px;
+      padding: 10px 16px;
+      margin-top: 8px;
+      margin-bottom: 1rem;
       text-decoration: none;
-      border-radius: 6px;
-      font-weight: 700;
+      border-radius: 5px;
+      font-weight: 600;
       transition: background-color 0.3s ease;
     }
     a.btn:hover {
       background-color: #019875;
-    }
-    ul {
-      list-style-type: disc;
-      padding-left: 20px;
     }
     footer {
       margin-top: 3rem;
@@ -92,57 +103,47 @@
 
   <main>
     <h1>Comprehensive Fitness Routine for Men</h1>
-    <p>Building muscle, increasing strength, and improving testosterone levels requires a well-rounded fitness routine. This guide covers essential exercises, recovery tips, and recommended gear to help you train effectively.</p>
+    <p>Building a fitness routine that supports testosterone, muscle growth, and overall health requires more than just lifting weights. It involves the right exercises, equipment, nutrition, and recovery strategies. Below is a detailed guide including recommended exercises and top-quality gear to help you get started.</p>
 
-    <h2>Key Exercises</h2>
-    <p>Focus on compound lifts that engage multiple muscle groups and stimulate hormonal responses:</p>
+    <h2>Key Exercises to Include</h2>
+    <p>These compound and accessory lifts help maximize muscle growth, strength, and hormonal benefits:</p>
     <ul>
-      <li><strong>Squats:</strong> Builds lower body strength and increases testosterone naturally.</li>
-      <li><strong>Deadlifts:</strong> Excellent for total body strength and hormone release.</li>
-      <li><strong>Bench Press:</strong> Targets chest, shoulders, and triceps for upper body mass.</li>
+      <li><strong>Squats:</strong> The king of all lifts, squats engage your legs, core, and lower back, stimulating testosterone release.</li>
+      <li><strong>Deadlifts:</strong> A full-body movement that targets posterior chain muscles and boosts growth hormone.</li>
+      <li><strong>Bench Press:</strong> Builds upper body strength focusing on chest, shoulders, and triceps.</li>
+      <li><strong>Pull-Ups/Chin-Ups:</strong> Essential for upper back and biceps development.</li>
       <li><strong>Overhead Press:</strong> Strengthens shoulders and improves posture.</li>
-      <li><strong>Pull-ups/Chin-ups:</strong> Great for back and biceps development.</li>
-      <li><strong>Rows:</strong> Balances pressing movements and supports shoulder health.</li>
     </ul>
 
-    <h2>Recommended Equipment</h2>
-    <p>Having quality gear makes workouts safer and more effective. Here are some of the best fitness products to consider, available on Amazon:</p>
+    <h2>Recommended Fitness Equipment</h2>
+    <p>Using quality equipment can improve safety, comfort, and workout effectiveness. Here are some products to consider:</p>
 
-    <h3>1. JELENS Multi-Function Power Rack</h3>
-    <p>This sturdy, adjustable squat rack supports various exercises including squats, bench press, and pull-ups — perfect for a home gym setup.</p>
-    <a class="btn" href="https://www.amazon.com/dp/B0DXKW1HMV?tag=testofit-20" target="_blank" rel="noopener noreferrer">Buy JELENS Power Rack</a>
+    <h3>Squat Rack</h3>
+    <p>Provides a safe and stable platform for squats, bench presses, and other barbell exercises.</p>
+    <a class="btn" href="https://www.amazon.com/dp/B0DXKW1HMV?tag=testofit-20" target="_blank" rel="noopener noreferrer">JELENS Multi-Function Squat Rack</a>
 
-    <h3>2. CAP Barbell Olympic Hex Dumbbells</h3>
-    <p>Durable dumbbells with ergonomic design ideal for curls, presses, and accessory work that complements your main lifts.</p>
-    <a class="btn" href="https://www.amazon.com/dp/B093RQ6YW8?tag=testofit-20" target="_blank" rel="noopener noreferrer">Buy CAP Barbell Dumbbells</a>
+    <h3>Hex Dumbbells</h3>
+    <p>Durable and versatile dumbbells for a wide range of strength training exercises.</p>
+    <a class="btn" href="https://www.amazon.com/dp/B093RQ6YW8?tag=testofit-20" target="_blank" rel="noopener noreferrer">CAP Barbell Olympic Hex Dumbbells</a>
 
-    <h3>3. Fitness Reality Weight Bench</h3>
-    <p>Adjustable bench for various pressing and rowing exercises, designed for comfort and stability.</p>
-    <a class="btn" href="https://www.amazon.com/dp/B099JZT1WR?tag=testofit-20" target="_blank" rel="noopener noreferrer">Buy Fitness Reality Weight Bench</a>
+    <h3>Adjustable Weight Bench</h3>
+    <p>A comfortable, foldable bench that supports various lifts like bench press, incline press, and dumbbell rows.</p>
+    <a class="btn" href="https://www.amazon.com/dp/B099JZT1WR?tag=testofit-20" target="_blank" rel="noopener noreferrer">Fitness Reality Adjustable Weight Bench</a>
 
-    <h3>4. Fitvids Olympic Weight Plates</h3>
-    <p>High-quality weight plates for barbell exercises, perfect for progressive overload and strength gains.</p>
-    <a class="btn" href="https://www.amazon.com/dp/B0DRFFPPP4?tag=testofit-20" target="_blank" rel="noopener noreferrer">Buy Fitvids Olympic Weight Plates</a>
+    <h3>Olympic Weight Plates</h3>
+    <p>High-quality plates to load your barbells for progressive strength training.</p>
+    <a class="btn" href="https://www.amazon.com/dp/B0DRFFPPP4?tag=testofit-20" target="_blank" rel="noopener noreferrer">Fitvids Olympic Weight Plates</a>
 
-    <h2>Training Tips for Maximum Testosterone</h2>
+    <h2>Additional Tips for Success</h2>
     <ul>
-      <li><strong>Progressive Overload:</strong> Gradually increase weight and intensity to stimulate growth and hormone production.</li>
-      <li><strong>Compound Movements:</strong> Prioritize exercises that recruit large muscle groups for optimal hormonal response.</li>
-      <li><strong>Proper Rest:</strong> Allow 48-72 hours recovery between heavy sessions to support testosterone levels.</li>
-      <li><strong>Nutrition:</strong> Support workouts with adequate protein, healthy fats, and micronutrients.</li>
-      <li><strong>Sleep:</strong> Aim for 7-9 hours per night as testosterone production peaks during deep sleep.</li>
-      <li><strong>Consistency:</strong> Maintain a routine for long-term results.</li>
+      <li><strong>Progressive Overload:</strong> Gradually increase weights or reps to continue challenging your muscles.</li>
+      <li><strong>Consistency:</strong> Stick to a regular training schedule of at least 3-4 days per week.</li>
+      <li><strong>Nutrition:</strong> Fuel your workouts with a balanced diet rich in protein, healthy fats, and complex carbs.</li>
+      <li><strong>Rest and Recovery:</strong> Prioritize sleep and recovery days to allow muscles to repair and grow.</li>
+      <li><strong>Form and Technique:</strong> Use proper form to avoid injury and maximize gains.</li>
     </ul>
 
-    <h2>Sample Weekly Workout Split</h2>
-    <ul>
-      <li><strong>Monday:</strong> Squat, Overhead Press, Pull-ups</li>
-      <li><strong>Wednesday:</strong> Deadlift, Bench Press, Rows</li>
-      <li><strong>Friday:</strong> Squat, Overhead Press, Chin-ups</li>
-      <li><em>Optional accessory work and cardio on off days.</em></li>
-    </ul>
-
-    <p><strong>Note:</strong> Always warm up properly and consider consulting a fitness professional to tailor the program to your individual needs.</p>
+    <p>Incorporate these exercises and gear into your routine to build strength, support testosterone, and improve overall fitness.</p>
   </main>
 
   <footer>
