--- a/fitness-routine-for-men.html
+++ b/fitness-routine-for-men.html
@@ -47,13 +47,17 @@
       margin-top: 2rem;
       color: #004d40;
     }
-    p {
+    h3 {
+      font-weight: 600;
+      margin-top: 1.2rem;
+      color: #00695c;
+    }
+    p, ul {
       margin-bottom: 1rem;
       font-size: 1rem;
     }
     ul {
       margin-left: 1.2rem;
-      margin-bottom: 1rem;
     }
     li {
       margin-bottom: 0.5rem;
@@ -102,48 +106,77 @@
   </header>
 
   <main>
-    <h1>Comprehensive Fitness Routine for Men</h1>
-    <p>Building a fitness routine that supports testosterone, muscle growth, and overall health requires more than just lifting weights. It involves the right exercises, equipment, nutrition, and recovery strategies. Below is a detailed guide including recommended exercises and top-quality gear to help you get started.</p>
+    <h1>Complete 7-Day Fitness Routine for Men</h1>
+    <p>This full-week workout plan focuses on maximizing testosterone production, muscle growth, and overall fitness. Each day targets specific muscle groups using proven compound and accessory exercises, combined with smart recovery strategies. Use quality equipment to enhance performance and stay safe.</p>
 
-    <h2>Key Exercises to Include</h2>
-    <p>These compound and accessory lifts help maximize muscle growth, strength, and hormonal benefits:</p>
+    <h2>Day 1: Legs & Core</h2>
+    <h3>Exercises:</h3>
     <ul>
-      <li><strong>Squats:</strong> The king of all lifts, squats engage your legs, core, and lower back, stimulating testosterone release.</li>
-      <li><strong>Deadlifts:</strong> A full-body movement that targets posterior chain muscles and boosts growth hormone.</li>
-      <li><strong>Bench Press:</strong> Builds upper body strength focusing on chest, shoulders, and triceps.</li>
-      <li><strong>Pull-Ups/Chin-Ups:</strong> Essential for upper back and biceps development.</li>
-      <li><strong>Overhead Press:</strong> Strengthens shoulders and improves posture.</li>
+      <li><strong>Barbell Squats</strong> (Quads, Glutes, Hamstrings, Core) – 4 sets of 8–10 reps</li>
+      <li><strong>Romanian Deadlifts</strong> (Hamstrings, Glutes, Lower Back) – 3 sets of 8–10 reps</li>
+      <li><strong>Walking Lunges</strong> (Quads, Glutes) – 3 sets of 12 steps each leg</li>
+      <li><strong>Plank</strong> (Core) – 3 sets of 30–60 seconds</li>
+      <li><strong>Leg Raises</strong> (Lower Abs) – 3 sets of 15 reps</li>
+    </ul>
+    <p><em>Tip:</em> Squats are the foundation for testosterone-boosting workouts. Use a solid <a href="https://www.amazon.com/dp/B0DXKW1HMV?tag=testofit-20" target="_blank" rel="noopener noreferrer">squat rack</a> for safety and proper form.</p>
+
+    <h2>Day 2: Chest & Triceps</h2>
+    <h3>Exercises:</h3>
+    <ul>
+      <li><strong>Barbell Bench Press</strong> (Chest, Shoulders, Triceps) – 4 sets of 8–10 reps</li>
+      <li><strong>Incline Dumbbell Press</strong> (Upper Chest, Shoulders) – 3 sets of 8–12 reps</li>
+      <li><strong>Dips</strong> (Triceps, Chest) – 3 sets of 10–15 reps</li>
+      <li><strong>Tricep Pushdowns</strong> (Triceps) – 3 sets of 12–15 reps</li>
+    </ul>
+    <p><em>Tip:</em> Dumbbells offer a greater range of motion and balance. Try the <a href="https://www.amazon.com/dp/B093RQ6YW8?tag=testofit-20" target="_blank" rel="noopener noreferrer">CAP Barbell Hex Dumbbells</a> for versatility.</p>
+
+    <h2>Day 3: Back & Biceps</h2>
+    <h3>Exercises:</h3>
+    <ul>
+      <li><strong>Deadlifts</strong> (Lower Back, Glutes, Hamstrings) – 4 sets of 6–8 reps</li>
+      <li><strong>Pull-Ups</strong> (Lats, Biceps) – 4 sets of max reps</li>
+      <li><strong>Bent Over Rows</strong> (Back, Rear Delts) – 3 sets of 8–10 reps</li>
+      <li><strong>Bicep Curls</strong> (Biceps) – 3 sets of 12 reps</li>
+    </ul>
+    <p><em>Tip:</em> Maintain strict form on deadlifts to avoid injury. Use quality weight plates like the <a href="https://www.amazon.com/dp/B0DRFFPPP4?tag=testofit-20" target="_blank" rel="noopener noreferrer">Fitvids Olympic Plates</a> for smooth training.</p>
+
+    <h2>Day 4: Active Recovery & Mobility</h2>
+    <p>Focus on light cardio, stretching, foam rolling, or yoga to improve flexibility and reduce muscle soreness. This helps maintain hormonal balance and supports muscle repair.</p>
+
+    <h2>Day 5: Shoulders & Abs</h2>
+    <h3>Exercises:</h3>
+    <ul>
+      <li><strong>Overhead Barbell Press</strong> (Shoulders, Traps) – 4 sets of 8–10 reps</li>
+      <li><strong>Lateral Raises</strong> (Side Delts) – 3 sets of 12–15 reps</li>
+      <li><strong>Face Pulls</strong> (Rear Delts, Upper Back) – 3 sets of 15 reps</li>
+      <li><strong>Russian Twists</strong> (Obliques) – 3 sets of 30 twists</li>
+      <li><strong>Hanging Leg Raises</strong> (Abs) – 3 sets of 15 reps</li>
     </ul>
 
-    <h2>Recommended Fitness Equipment</h2>
-    <p>Using quality equipment can improve safety, comfort, and workout effectiveness. Here are some products to consider:</p>
-
-    <h3>Squat Rack</h3>
-    <p>Provides a safe and stable platform for squats, bench presses, and other barbell exercises.</p>
-    <a class="btn" href="https://www.amazon.com/dp/B0DXKW1HMV?tag=testofit-20" target="_blank" rel="noopener noreferrer">JELENS Multi-Function Squat Rack</a>
-
-    <h3>Hex Dumbbells</h3>
-    <p>Durable and versatile dumbbells for a wide range of strength training exercises.</p>
-    <a class="btn" href="https://www.amazon.com/dp/B093RQ6YW8?tag=testofit-20" target="_blank" rel="noopener noreferrer">CAP Barbell Olympic Hex Dumbbells</a>
-
-    <h3>Adjustable Weight Bench</h3>
-    <p>A comfortable, foldable bench that supports various lifts like bench press, incline press, and dumbbell rows.</p>
-    <a class="btn" href="https://www.amazon.com/dp/B099JZT1WR?tag=testofit-20" target="_blank" rel="noopener noreferrer">Fitness Reality Adjustable Weight Bench</a>
-
-    <h3>Olympic Weight Plates</h3>
-    <p>High-quality plates to load your barbells for progressive strength training.</p>
-    <a class="btn" href="https://www.amazon.com/dp/B0DRFFPPP4?tag=testofit-20" target="_blank" rel="noopener noreferrer">Fitvids Olympic Weight Plates</a>
-
-    <h2>Additional Tips for Success</h2>
+    <h2>Day 6: Full Body Strength</h2>
+    <h3>Exercises:</h3>
     <ul>
-      <li><strong>Progressive Overload:</strong> Gradually increase weights or reps to continue challenging your muscles.</li>
-      <li><strong>Consistency:</strong> Stick to a regular training schedule of at least 3-4 days per week.</li>
-      <li><strong>Nutrition:</strong> Fuel your workouts with a balanced diet rich in protein, healthy fats, and complex carbs.</li>
-      <li><strong>Rest and Recovery:</strong> Prioritize sleep and recovery days to allow muscles to repair and grow.</li>
-      <li><strong>Form and Technique:</strong> Use proper form to avoid injury and maximize gains.</li>
+      <li><strong>Front Squats</strong> (Quads, Core) – 4 sets of 8 reps</li>
+      <li><strong>Weighted Pull-Ups</strong> (Back, Biceps) – 4 sets of 6–8 reps</li>
+      <li><strong>Dumbbell Bench Press</strong> (Chest, Triceps) – 4 sets of 8–10 reps</li>
+      <li><strong>Romanian Deadlifts</strong> (Hamstrings, Glutes) – 3 sets of 10 reps</li>
+    </ul>
+    <p><em>Tip:</em> Use an <a href="https://www.amazon.com/dp/B099JZT1WR?tag=testofit-20" target="_blank" rel="noopener noreferrer">adjustable bench</a> for dumbbell exercises and incline variations.</p>
+
+    <h2>Day 7: Rest & Recovery</h2>
+    <p>Complete rest or very light activity like walking or stretching. Focus on quality sleep (7–9 hours) and nutrition to support hormone balance and muscle growth.</p>
+
+    <h2>General Tips for Maximizing Your Routine</h2>
+    <ul>
+      <li><strong>Progressive Overload:</strong> Increase weight or reps slightly each week to continue muscle growth.</li>
+      <li><strong>Nutrition:</strong> Eat enough protein (0.7–1g per lb bodyweight), healthy fats, and complex carbs.</li>
+      <li><strong>Hydration:</strong> Stay well-hydrated to improve performance and recovery.</li>
+      <li><strong>Sleep:</strong> Deep sleep helps regulate testosterone and muscle repair.</li>
+      <li><strong>Consistency:</strong> Stick to your workout days and track progress for best results.</li>
+      <li><strong>Form First:</strong> Never sacrifice technique for heavier weights to avoid injury.</li>
     </ul>
 
-    <p>Incorporate these exercises and gear into your routine to build strength, support testosterone, and improve overall fitness.</p>
+    <p>Equip yourself with quality gear and stay disciplined — this plan will help you build muscle, boost testosterone naturally, and feel stronger every day.</p>
   </main>
 
   <footer>
