--- a/testosterone-guide.html
+++ b/testosterone-guide.html
@@ -2,16 +2,84 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ultimate Guide to Testosterone | TestoFit</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Ultimate Testosterone Guide | TestoFit</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
-    body { font-family: 'Outfit', sans-serif; margin: 0; background: #f4f4f4; color: #333; }
-    header, footer { background: #111; color: white; text-align: center; padding: 1rem; }
-    nav a { color: white; margin: 0 15px; text-decoration: none; }
-    nav a:hover { text-decoration: underline; }
-    main { max-width: 800px; margin: auto; padding: 2rem; background: white; border-radius: 10px; box-shadow: 0 0 8px rgba(0,0,0,0.05); }
-    h1 { margin-top: 0; }
+    body {
+      font-family: 'Outfit', sans-serif;
+      margin: 0;
+      background-color: #f4f4f4;
+      color: #222;
+    }
+    header {
+      background-color: #111;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      max-width: 850px;
+      margin: 2rem auto;
+      padding: 2rem;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      line-height: 1.6;
+    }
+    h1 {
+      font-weight: 800;
+      font-size: 2.2rem;
+      margin-bottom: 1rem;
+      color: #00796b;
+    }
+    h2 {
+      font-weight: 700;
+      margin-top: 2rem;
+      color: #004d40;
+    }
+    p {
+      margin-bottom: 1rem;
+      font-size: 1rem;
+    }
+    a.btn {
+      display: inline-block;
+      background-color: #00b894;
+      color: white;
+      padding: 10px 16px;
+      margin: 10px 0 20px 0;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: 600;
+      transition: background-color 0.3s ease;
+    }
+    a.btn:hover {
+      background-color: #019875;
+    }
+    footer {
+      margin-top: 3rem;
+      padding: 1rem 0;
+      background-color: #f9f9f9;
+      border-top: 1px solid #ddd;
+      color: #666;
+      font-size: 0.9rem;
+      text-align: center;
+    }
+    footer p {
+      margin: 0.5rem 0;
+    }
+    footer p em {
+      font-style: italic;
+    }
   </style>
 </head>
 <body>
@@ -24,29 +92,42 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+
   <main>
-    <h1>Ultimate Guide to Testosterone</h1>
-    <p><strong>Testosterone</strong> is the primary male sex hormone responsible for muscle growth, energy, libido, mood regulation, and more. Understanding how it works—and how to optimize it—is key to overall male health.</p>
+    <h1>The Ultimate Guide to Testosterone</h1>
+
     <h2>What is Testosterone?</h2>
-    <p>It’s a hormone produced mainly in the testicles. It regulates fertility, fat distribution, red blood cell production, and more.</p>
-    <h2>Why Does Testosterone Matter?</h2>
-    <ul>
-      <li>Builds and preserves muscle mass</li>
-      <li>Supports mood and cognitive function</li>
-      <li>Boosts libido and sexual health</li>
-    </ul>
+    <p>Testosterone is the primary male sex hormone, playing a crucial role in the development of male reproductive tissues, muscle mass, bone density, and overall vitality. It’s also present in women, though in smaller amounts, where it contributes to libido and mood regulation. Produced mainly in the testes and adrenal glands, testosterone influences energy, confidence, and cognitive function. Levels naturally decline with age, which can impact physical and mental health, making it important to understand how to maintain optimal levels through lifestyle and nutrition.</p>
+
     <h2>Signs of Low Testosterone</h2>
-    <p>Common signs include low energy, irritability, decreased strength, low libido, and trouble sleeping.</p>
-    <h2>Natural Boosting Tips</h2>
-    <ul>
-      <li>Lift heavy weights and exercise regularly</li>
-      <li>Get quality sleep (7–9 hours)</li>
-      <li>Eat healthy fats and avoid processed junk</li>
-      <li>Minimize stress and alcohol</li>
-    </ul>
+    <p>Low testosterone, or hypogonadism, can manifest in many ways: decreased libido, fatigue, loss of muscle mass, increased body fat, depression, and difficulty concentrating. Men with low levels often experience reduced strength and endurance, along with mood swings and irritability. Early detection is key, and blood tests can confirm testosterone levels. Addressing symptoms promptly can help improve quality of life, whether through lifestyle changes, supplements, or medical intervention.</p>
+
+    <h2>How to Naturally Boost Testosterone</h2>
+    <p>Optimizing testosterone naturally involves a holistic approach focusing on diet, exercise, sleep, and stress management. Strength training, particularly heavy compound lifts like squats and deadlifts, promotes testosterone production. Adequate sleep (7–9 hours) is essential as testosterone peaks during deep REM sleep. A balanced diet rich in healthy fats, protein, and micronutrients supports hormone synthesis. Managing stress is vital because chronic stress raises cortisol, which suppresses testosterone. Natural supplements can also aid; for example, Vitamin D and Zinc are well-known for their hormone-boosting effects.</p>
+    <a class="btn" href="https://www.amazon.com/dp/B00EZSUVHK?tag=testofit-20" target="_blank" rel="noopener noreferrer">Shop Vitamin D Supplements</a>
+    <a class="btn" href="https://www.amazon.com/dp/B002WUAQWU?tag=testofit-20" target="_blank" rel="noopener noreferrer">Shop Zinc Supplements</a>
+
+    <h2>Role of Diet in Testosterone Health</h2>
+    <p>Your diet directly affects testosterone levels. Nutrients like zinc, magnesium, and vitamin D are crucial for hormone production. Consuming healthy fats—such as those found in eggs, avocados, and nuts—supports the building blocks of testosterone. Avoid processed foods and excessive sugar, as they can increase inflammation and insulin resistance, both harmful to hormone balance. Hydration also plays a role in maintaining energy and metabolic function, which indirectly supports testosterone.</p>
+
+    <h2>Exercise and Testosterone</h2>
+    <p>Exercise is one of the most effective ways to boost testosterone. Resistance training, especially heavy compound movements like squats, deadlifts, and bench presses, stimulates hormone release. High-intensity interval training (HIIT) also promotes testosterone spikes. Consistency is key; regular workouts help maintain elevated levels. However, overtraining or inadequate recovery can cause a drop in testosterone. Always balance exercise intensity with proper rest and nutrition.</p>
+    <a class="btn" href="https://www.amazon.com/dp/B0DXKW1HMV?tag=testofit-20" target="_blank" rel="noopener noreferrer">Shop Squat Rack</a>
+    <a class="btn" href="https://www.amazon.com/dp/B093RQ6YW8?tag=testofit-20" target="_blank" rel="noopener noreferrer">Shop Dumbbells</a>
+
+    <h2>Supplements to Consider</h2>
+    <p>While a nutrient-rich diet is ideal, some supplements can support testosterone production when paired with healthy habits. Vitamin D3 supports hormone synthesis and immune health. Zinc is essential for testosterone biosynthesis and sperm health. Ashwagandha, an adaptogenic herb, may reduce cortisol and increase testosterone. Fish oil (omega-3 fatty acids) helps reduce inflammation and supports cardiovascular health, indirectly benefiting hormone balance. Always consult a healthcare provider before starting supplements.</p>
+    <a class="btn" href="https://www.amazon.com/dp/B0046XC528?tag=testofit-20" target="_blank" rel="noopener noreferrer">Shop Fish Oil</a>
+    <a class="btn" href="https://www.amazon.com/dp/B01IQ00B04?tag=testofit-20" target="_blank" rel="noopener noreferrer">Shop Avocado Oil</a>
+
+    <h2>When to See a Doctor</h2>
+    <p>If you experience persistent symptoms of low testosterone such as low energy, reduced sex drive, or muscle loss, a doctor’s visit is crucial. Blood tests can assess hormone levels and rule out underlying health issues. In some cases, testosterone replacement therapy (TRT) may be recommended, but it requires careful medical supervision. Natural methods should always be the first step, supported by lifestyle changes and nutrition.</p>
+
   </main>
+
   <footer>
-    &copy; 2025 TestoFit. All rights reserved.
+    <p><em>Disclosure: Some links are affiliate links. We may earn a commission if you purchase through them, at no extra cost to you.</em></p>
+    <p>&copy; 2025 TestoFit. All rights reserved.</p>
   </footer>
 </body>
 </html>
